syntax = "proto3";

package com.academy.fintech.origination;

option java_multiple_files = true;

service OriginationService {
  rpc CreateApplication(CreationRequest) returns (CreationResponse) {}
  rpc CancelApplication(CancellationRequest) returns (CancellationResponse) {}
}

message CreationRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  uint32 salary = 4;
  uint32 disbursement_amount = 5;
}

message CreationResponse {
  string application_id = 1;
}

message CancellationRequest {
  string application_id = 1;
}

message CancellationResponse {
  bool is_canceled = 1;
}